--- a/index.html
+++ b/index.html
@@ -4,58 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
+    <title>Landing Page</title>
 </head>
 <body>
-    <div class="container">
-        <div class="navbar">
-            <div class="logo">Header Logo</div>
+        <header id="header">
+            <a href="#header" class="logo"><img src="./images/logo.jpeg" alt="logo"></a>
             <nav>
-                <ul>
+                <ul class="nav-links">
+                    <li><a href="#">Team</a></li>
+                    <li><a href="#">Portfolio</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-        </div>
-
-        <div class="hero-section">
-            <div class="hero1">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower</p>
-                <button>Sign up</button>
-            </div>
-            <img src="./images/pexels-lukas-1420702.jpg" alt="This is a placeholder for an image">
-        </div>
-
-        <div class="info">
-            <h2>Information</h2>
-            <div class="content-info">
-                <div>
-                    <img src="" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            
-            </div>
-        </div>
-        
-        <div class="quote-section">
-            <h2>This is an inspiring quote, Where the determination is the way can be found</h2>
-            <p>--Babylon</p>
-        </div>
-    </div>
+            <a href="#" class="contact"><button>Contact</button></a>
+        </header>
 </body>
 </html>
