added project page

--- a/index.html
+++ b/index.html
@@ -8,16 +8,55 @@
     <title>Landing Page</title>
 </head>
 <body>
-        <header id="header">
-            <a href="#header" class="logo"><img src="./images/logo.jpeg" alt="logo"></a>
-            <nav>
-                <ul class="nav-links">
-                    <li><a href="#">Team</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">About</a></li>
-                </ul>
-            </nav>
-            <a href="#" class="contact"><button>Contact</button></a>
-        </header>
+    <header id="header">
+        <a href="#header" class="logo"><img src="./images/logo.jpeg" alt="logo"></a>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="#">Team</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </nav>
+        <a href="#" class="contact"><button>Contact</button></a>
+    </header>
+
+    <!-- Hero section -->
+
+    <div class="hero-container">
+        <div class="hero-main">
+            <h1>This website is for practice purpose only!</h1>
+            <p>This website is for personal practice using html, css and flexbox and will update from time to time. I am building a landing page for a dummy company.</p>
+            <button>Sign up</button>
+        </div>
+        <img src="./images/pexels-lukas-1420702.jpg" alt="image">
+    </div>
+
+    <!-- portfolio section -->
+
+    <div class="port-container">
+        <h2>Mini Projects</h2>
+        <div class="port-main">
+            <div class="projects">
+                <div>
+                    <img src="./images/logo.jpeg" alt="projects">
+                </div>
+                <div>
+                    <p>Capstone-1</p>
+                </div>
+            </div>
+            <div class="projects">
+                <img src="./images/logo.jpeg" alt="projects">
+                <p>Capstone-1</p>
+            </div>
+            <div class="projects">
+                <img src="./images/logo.jpeg" alt="projects">
+                <p>Capstone-1</p>
+            </div>
+            <div class="projects">
+                <img src="./images/logo.jpeg" alt="projects">
+                <p>Capstone-1</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
