added quote, contact and footer section

--- a/index.html
+++ b/index.html
@@ -58,5 +58,31 @@
             </div>
         </div>
     </div>
+
+    <!-- Quote section -->
+    <div class="quote-container">
+        <h2 class="quote-main">This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</h2>
+        <p>-Anonymous</p>
+    </div>
+
+    <!-- Contact section -->
+
+    <div class="contact-container">
+        <div class="contact-main">
+            <div class="contact-signup">
+                <div class="signup">
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button over there!</p>
+                </div>
+                <div class="button">
+                    <button>Sign up</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <footer>Odin Project</footer>
+    </div>
 </body>
 </html>
